--- a/team.html
+++ b/team.html
@@ -130,6 +130,17 @@
 				} );
 			});
 	</script>
+
+	<script type="text/javascript" src="scripts/global.js"></script>
+	<script type="text/javascript">
+			$( window ).ready(function(){
+				// Load the includes
+				w3IncludeHTML();
+				window.include( '#footer_html', 'footer.html', function(){
+					window.footer.load();
+				} );
+			});
+	</script>
  </head>
   <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
     <div id="body-wrapper">
@@ -179,7 +190,7 @@
 				</div>
 			</div>
 
-			<div w3-include-html="footer.html"></div>
+			<div id="footer_html"></div>
 		</div>
   </body>
 </html>
