--- a/description.html
+++ b/description.html
@@ -58,7 +58,7 @@
           return cell;
         } );
 
-        window.include( '#footer_html', 'footer.html', function(){
+        window.include( '#footer_html', function(){
           window.footer.load();
         } );
       });
@@ -158,6 +158,6 @@
         </div>
       </div>
 
-   	<div id='footer_html'></div>
+      <div id="footer_html" data-source="footer.html"></div>
   </body>
 </html>
