--- a/events.html
+++ b/events.html
@@ -40,7 +40,7 @@
         $( window ).ready(function(){
           // Load the includes
           w3IncludeHTML();
-          window.include( '#footer_html', 'footer.html', function(){
+          window.include( '#footer_html', function(){
             window.footer.load();
           } );
         });
@@ -135,7 +135,6 @@ Our main act, was letting visitors create bio-art. Bio-art, being the beautiful 
         </div>
       </div>
 
-      <div id="footer_html"></div>
-
+      <div id="footer_html" data-source="footer.html"></div>
   </body>
 </html>
