--- a/team.html
+++ b/team.html
@@ -136,7 +136,7 @@
 			$( window ).ready(function(){
 				// Load the includes
 				w3IncludeHTML();
-				window.include( '#footer_html', 'footer.html', function(){
+				window.include( '#footer_html', function(){
 					window.footer.load();
 				} );
 			});
@@ -190,7 +190,7 @@
 				</div>
 			</div>
 
-			<div id="footer_html"></div>
+			<div id="footer_html" data-source="footer.html"></div>
 		</div>
   </body>
 </html>
