--- a/Bioreactor.html
+++ b/Bioreactor.html
@@ -41,7 +41,7 @@
         $( window ).ready(function(){
           // Load the includes
           w3IncludeHTML();
-          window.include( '#footer_html', 'footer.html', function(){
+          window.include( '#footer_html', function(){
             window.footer.load();
           } );
         });
@@ -108,7 +108,7 @@
       </div>
 
 
-		<div id="footer_html"></div>
+      <div id="footer_html" data-source="footer.html"></div>
 
   </body>
 </html>
