--- a/labjournal.html
+++ b/labjournal.html
@@ -40,7 +40,7 @@
         $( window ).ready(function(){
           // Load the includes
           w3IncludeHTML();
-          window.include( '#footer_html', 'footer.html', function(){
+          window.include( '#footer_html', function(){
             window.footer.load();
           } );
         });
@@ -136,6 +136,6 @@
         </div>
       </div> -->
 
-      <div id="footer_html"></div>
+      <div id="footer_html" data-source="footer.html"></div>
   </body>
 </html>
