--- a/navbar.html
+++ b/navbar.html
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-default navbar-fixed-top" style='position: fixed; top: 15px;'>
+<nav id="navbar" class="navbar navbar-default navbar-fixed-top" style='position: fixed; top: 10px;'>
         <div class="container">
           <div class="navbar-header">
             <a class="navbar-brand" href="index.html">
-              <img alt="iGEM" src="images/logo_iGEM_Leiden.png" width="40" style="position: relative; top: -10px;"/>
+              <img alt="iGEM" src="images/logo_iGEM_Leiden.png" width="40" style="position: relative; top: 0px;"/>
             </a>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
               <span class="icon-bar"></span>
